2011-06-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme] Use ‘cons*’, not ‘list*’.

	Apparently, ‘list*’ is not cool enough for some Guile versions.

	* doc/mkinc (symbol->texi): Use ‘cons*’, not ‘list*’.

2011-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't clobber Makefile "user vars" ‘CPPFLAGS’, ‘LDFLAGS’.

	* configure.ac: Don't compose ‘CPPFLAGS’, ‘LDFLAGS’;
	instead, compose ‘SUBCPPFLAGS’, ‘SUBLDFLAGS’.

2011-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Rewrite --with-libpq{,-includes,-lib} handling.

	* configure.ac (pq-rpath): New AC_ARG_ENABLE.
	(PG_CHECK_DIR): New AC_DEFUN.
	(libpq, libpq-includes, libpq-lib): New AC_ARG_WITHs.
	(PG_PQ_NOT_YET): New AC_DEFUN.
	<top-level>: Rewrite ‘--with-libpq’ handling; combine
	handling of ‘--with-libpq-includes’ and ‘--with-libpq-lib’;
	simplify failure message; use ‘AC_MSG_FAILURE’; simplify
	‘--enable-pq-rpath’ handling; append " -lpq" as the last step.
	* build-aux/guile-pg.m4: Delete file.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: #include <libpq-fe.h> to look for some pg_ funcs.

	Omission from 2008-07-11, "Conditionalize
	‘pg_encoding_to_char’ decl; make its retval ‘const’";
	and 2009-06-18, "New (database postgres) proc: pg-mblen".

	* configure.ac (pg_encoding_to_char, pg_char_to_encoding):
	Specify #include <libpq-fe.h> to AC_CHECK_DECLS.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Don't check for "Guile site dir".

	* configure.ac (GUILE_SITE_DIR): Delete macro call.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't chmod +x test/{runtest,show-platform}.

	* configure.ac (AC_CONFIG_FILES):
	Add test/runtest, test/show-platform.
	(test/show-platform): Delete AC_GUILE_PG_CONFIG_SCRIPT.
	(test/runtest): Likewise.
	* build-aux/guile-pg.m4 (AC_GUILE_PG_CONFIG_SCRIPT): Delete AC_DEFUN.

2011-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Don't check for ‘scm_ptob_descriptor.fill_input’.
