@@ -10,15 +10,6 @@
 
 set -e
 
-######################################################################
-# Local.
-
-for f in sofix sofix.m4 uninstall-sofixed ; do
-    g=../.common/$f
-    test -f $g || { echo ERROR: No such file: $g ; exit 1 ; }
-    ( cd build-aux ; ln -sf ../$g $f )
-done
-
 #############################################################################
 # Guile-BAUX
 
